[build-system]
requires = ["maturin>=1.3.0"]
build-backend = "maturin"

[project]
name = "place_me"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

